--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -245,7 +245,7 @@
         <div class="progress mb-3" style="height: 5px;">
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <table class="row m-3 d-flex flex-row justify-content-around">
+        <div class="row m-3 d-flex flex-row justify-content-around">
             <div class="col-md-12 p-0" >
                 <table class="table table-bordered table-dark">
                     <thead>
@@ -302,6 +302,7 @@
                 </table>
             </div>
         </div>
+
 
 
         <div class="row mx-3 d-flex flex-row">
@@ -518,6 +519,7 @@
         <div class="progress mb-3" style="height: 5px;">
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+
     </div>
 
 
