--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -69,6 +69,43 @@ form {
     }
 }
 
+input[type=text],
+textarea,
+select {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    padding: 14px 5px 5px;
+    margin: 0px;
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    outline: none;
+}
+
+input[type="text"] + label[placeholder] {
+    display: block;
+    pointer-events: none;
+    line-height: 46px;
+    margin-top: -46px;
+}
+
+input[type="text"] + label[placeholder]:before {
+    content: attr(placeholder);
+    display: inline-block;
+    padding: 0;
+    color: #999999;
+    white-space: nowrap;
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    -webkit-transform: translate(8px, -12px);
+    -ms-transform: translate(8px, -12px);
+    transform: translate(8px, -12px);
+    text-transform: uppercase;
+    font-size: 9px;
+    margin: 0 0 0 -2px;
+}
 
 
 /*
