student view navbar

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -20,7 +20,23 @@
 
 
     <div class="container-fluid">
+
         <div class="row d-flex flex-row m-3">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="d-flex flex-row navbar-nav">
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Presentation">Présentation</a>
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Objectifs_cours">Objectifs du cours</a>
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Contenu_activites">Contenu et activités</a>
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Modalites_evaluation">Modalités d'évaluation</a>
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Materiel_ressources">Matériel et ressources</a>
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Informations_pratiques">Informations pratiques</a>
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Reglementation">Réglementation</a>
+                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Mot_fin">Mot de la fin</a>
+                </div>
+            </nav>
+        </div>
+
+        <div id="Presentation" class="row d-flex flex-row m-3">
             <div class="col-md-6">
                 <h4 class="text-justify text-left font-weight-bold">
                     {{course.title}}
@@ -161,7 +177,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div id="Objectifs_cours" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Objectifs du cours
@@ -235,7 +251,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div id="Contenu_activites" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Contenu et activités
@@ -288,7 +304,7 @@
 
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div id="Modalites_evaluation" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Modalités d'évaluation
@@ -394,7 +410,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div id="Materiel_ressources" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Matériel et ressources
@@ -452,7 +468,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div id="Informations_pratiques" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Informations pratiques
@@ -484,7 +500,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div id="Reglementation" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Réglementation
@@ -501,7 +517,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div id="Mot_fin" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold">
                     Mot de la fin
