Activty entity and dependencies modifications

--- a/app/Resources/views/form/choices_activities_field.html.twig
+++ b/app/Resources/views/form/choices_activities_field.html.twig
@@ -5,8 +5,7 @@
         <input type="hidden" class="activity-id" value="{{ choiceActivity.data.id }}">
         <input type="hidden" class="activity-type" value="{{ choiceActivity.data.type }}">
         <input type="hidden" class="activity-mode" value="{{ choiceActivity.data.mode }}">
-        <input type="hidden" class="activity-size" value="{{ choiceActivity.data.size }}">
-        <input type="hidden" class="activity-evaluation" value="{{ choiceActivity.data.evaluation }}">
+        <input type="hidden" class="activity-grp" value="{{ choiceActivity.data.grp }}">
         <input type="hidden" class="activity-color" value="{{ color }}">
     </div>
 {% endmacro %}
