--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -22,18 +22,40 @@
     <div class="container-fluid">
 
         <div class="row d-flex flex-row m-3">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="d-flex flex-row navbar-nav">
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Presentation">Présentation</a>
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Objectifs_cours">Objectifs du cours</a>
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Contenu_activites">Contenu et activités</a>
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Modalites_evaluation">Modalités d'évaluation</a>
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Materiel_ressources">Matériel et ressources</a>
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Informations_pratiques">Informations pratiques</a>
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Reglementation">Réglementation</a>
-                    <a class="nav-item nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info col " href="#Mot_fin">Mot de la fin</a>
+
+            <nav class="navbar navbar-expand-md navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button> 
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav flex-row mr-auto">
+                      <li class="nav-item active">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Presentation">Présentation</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Objectifs_cours">Objectifs du cours</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Contenu_activites">Contenu et activités</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Modalites_evaluation">Modalités d'évaluation</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Materiel_ressources">Matériel et ressources</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Informations_pratiques">Informations pratiques</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Reglementation">Réglementation</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Mot_fin">Mot de la fin</a>
+                      </li> 
+                </ul> 
                 </div>
-            </nav>
+            </nav> 
         </div>
 
         <div id="Presentation" class="row d-flex flex-row m-3">
