--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -23,39 +23,39 @@
 
         <div class="row d-flex flex-row m-3">
 
-            <nav class="navbar navbar-expand-md navbar-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+            <nav class="navbar navbar-expand-lg  navbar-dark bg-info border p-0 text-center">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-light"></span>
                 </button> 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav flex-row mr-auto">
-                      <li class="nav-item active">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Presentation">Présentation</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Objectifs_cours">Objectifs du cours</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Contenu_activites">Contenu et activités</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Modalites_evaluation">Modalités d'évaluation</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Materiel_ressources">Matériel et ressources</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Informations_pratiques">Informations pratiques</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Reglementation">Réglementation</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-flex flex-column justify-content-center align-items-center text-light border bg-info  " href="#Mot_fin">Mot de la fin</a>
-                      </li> 
-                </ul> 
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav text-center">
+                        <li class="nav-item d-flex flex-row align-items-center border-right">
+                            <a class="nav-link text-light" href="#Presentation">Présentation</a>
+                        </li>
+                        <li class="nav-item d-flex flex-row align-items-center border-right">
+                            <a class="nav-link text-light" href="#Objectifs_cours">Objectifs du cours</a>
+                        </li>
+                        <li class="nav-item d-flex flex-row align-items-center border-right">
+                            <a class="nav-link text-light" href="#Contenu_activites">Contenu et activités</a>
+                        </li>
+                        <li class="nav-item d-flex flex-row align-items-center border-right">
+                            <a class="nav-link text-light" href="#Modalites_evaluation">Modalités d'évaluation</a>
+                        </li>
+                        <li class="nav-item d-flex flex-row align-items-center border-right">
+                            <a class="nav-link text-light" href="#Materiel_ressources">Matériel et ressources</a>
+                        </li>
+                        <li class="nav-item d-flex flex-row align-items-center border-right">
+                            <a class="nav-link text-light" href="#Informations_pratiques">Informations pratiques</a>
+                        </li>
+                        <li class="nav-item d-flex flex-row align-items-center border-right">
+                            <a class="nav-link text-light" href="#Reglementation">Réglementation</a>
+                        </li>
+                        <li class="nav-item d-flex flex-row align-items-center">
+                            <a class="nav-link text-light" href="#Mot_fin">Mot de la fin</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav> 
+            </nav>
         </div>
 
         <div id="Presentation" class="row d-flex flex-row m-3">
